# vcfstats

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .tagitrc  .travis.yml  404.html  Dockerfile  LICENSE  Makefile  README.md  README.rst  index.html  mkdocs.yml  pyproject.toml  requirements.txt  run-examples.sh  setup.py  tox.ini
.github/workflows/: build.yml  docs.yml
CHANGELOG/: index.html
cliargs/: index.html
configfile/: index.html
docs/: CHANGELOG.md  cliargs.md  configfile.md  formulas.md  macros.md
docs/examples/: config.toml  sample.vcf
examples/: config.toml  depths-between-sample-1-and-2.csv  multiallelic.vcf  mymacros.py  sample.vcf
formulas/: index.html
macros/: index.html
search/: search_index.json
tests/: test_formula.py  test_init.py  test_instance.py  test_macros.py  test_one.py
vcfstats/: __init__.py  __main__.py  args.toml  cli.py  formula.py  instance.py  macros.py  one.py  utils.py
