[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "vcfstats"
version = "0.4.3"
description = "Powerful statistics for VCF files"
authors = [ "pwwang <pwwang@pwwang.com>",]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pwwang/vcfstats"
repository = "https://github.com/pwwang/vcfstats"
include = ["vcfstats/args.toml"]

[tool.poetry.dependencies]
python = "^3.8"
cyvcf2 = "^0.30"
lark-parser = "^0.12"
plotnine = "^0.10"
plotnine-prism = "^0.2"
python-slugify = "^8"
datar = { version = "^0.11", extras = ["pandas"] }
py = "^1.10"
argx = "^0.1.0"

[tool.poetry.dev-dependencies]
cmdy = "^0.5"
pytest = "^7"
pytest-cov = "^4"

[tool.poetry.scripts]
vcfstats = "vcfstats.cli:main"

[tool.black]
line-length = 79
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'

[tool.pytest.ini_options]
addopts = "-vv -p 'no:asyncio' --cov-config=.coveragerc --cov=vcfstats --cov-report xml:.coverage.xml --cov-report term-missing"
filterwarnings = [
    # "error"
]
console_output_style = "progress"
junit_family = "xunit1"
