[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "vcfstats"
version = "0.7.0"
description = "Powerful statistics for VCF files"
authors = [ "pwwang <pwwang@pwwang.com>",]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pwwang/vcfstats"
repository = "https://github.com/pwwang/vcfstats"
include = ["vcfstats/args.toml"]

[tool.poetry.dependencies]
python = "^3.9"
cyvcf2 = "^0.30"
lark = "^1.2"
plotnine-prism = "^0.3.2"
python-slugify = "^8"
datar = { version = "<0.15.9", extras = ["pandas"] }
py = "^1.11"
argx = "^0.3"
rich = "^13"

[tool.poetry.group.dev.dependencies]
pytest = "^8"
pytest-cov = "^6"

[tool.poetry.scripts]
vcfstats = "vcfstats.cli:main"

[tool.black]
line-length = 87
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.pytest.ini_options]
addopts = "-vv -p 'no:asyncio' --cov-config=.coveragerc --cov=vcfstats --cov-report xml:.coverage.xml --cov-report term-missing"
filterwarnings = [
    # "error"
]
console_output_style = "progress"
junit_family = "xunit1"
